--- a/Projetos/Blogr-Landing-Page/index.html
+++ b/Projetos/Blogr-Landing-Page/index.html
@@ -47,7 +47,7 @@
           </div>
         </div>
       </div>
-      <div>
+      <div class="login-zone">
         <button>Login</button>
         <button>Sign Up</button>
       </div>
@@ -62,60 +62,65 @@
     </div>
   </div>
 
-
-  <div>
-    <div>
-      <h2>Designed for the future</h2>
+  <div class="sections">
+    <div class="section">
       <div>
-        <h3>Introducing an extensible editor</h3>
-        <p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
-          The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
-          videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
-          change the looks of a blog.</p>
+        <img src="./images/illustration-editor-desktop.svg" alt="">
+        <h2>Designed for the future</h2>
+        <div>
+          <h3>Introducing an extensible editor</h3>
+          <p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
+            The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
+            videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
+            change the looks of a blog.</p>
+        </div>
+        <div>
+          <h3>Robust content management</h3>
+          <p>Flexible content management enables users to easily move through posts. Increase the usability of your blog 
+            by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.</p>
+        </div>
       </div>
       <div>
-        <h3>Robust content management</h3>
-        <p>Flexible content management enables users to easily move through posts. Increase the usability of your blog 
-          by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.</p>
-      </div>
-      
-    </div>
-    <div>
-      <h2>State of the Art Infrastructure</h2>
-      <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
-        This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.</p>
-    </div>
-    <div>
-      <h3>Free, open, simple</h3>
-      <p>Blogr is a free and open source application backed by a large community of helpful developers. It supports 
-        features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
-        and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.</p>
-      <h3>Powerful tooling</h3>
-      <p>Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
-        capable of producing even the most complicated sites.</p>
-    </div>
-    <div>
-      <img src="./images/logo.svg" alt="logo">
-      <div>
-        <p>Product</p>
-        <a href="">Overview</a>
-        <a href="">Pricing</a>
-        <a href="">Marketplace</a>
-        <a href="">Features</a>
-        <a href="">Integrations</a>
+        <img src="./images/illustration-phones.svg" alt="">
+        <div>
+          <h2>State of the Art Infrastructure</h2>
+          <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
+            This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.</p>
+        </div>
+        
       </div>
       <div>
-        <p>Company</p>
-        <a href="">About</a>
-        <a href="">Team</a>
-        <a href="">Blog</a>
-        <a href="">Careers</a>
+        <h3>Free, open, simple</h3>
+        <p>Blogr is a free and open source application backed by a large community of helpful developers. It supports 
+          features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
+          and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.</p>
+        <h3>Powerful tooling</h3>
+        <p>Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
+          capable of producing even the most complicated sites.</p>
       </div>
       <div>
-        <p>Connect</p>
-        <a href="">Contact</a>
-        <a href="">Newsletter</a>
-        <a href="">LinkedIn</a>
+        <img src="./images/logo.svg" alt="logo">
+        <div>
+          <p>Product</p>
+          <a href="">Overview</a>
+          <a href="">Pricing</a>
+          <a href="">Marketplace</a>
+          <a href="">Features</a>
+          <a href="">Integrations</a>
+        </div>
+        <div>
+          <p>Company</p>
+          <a href="">About</a>
+          <a href="">Team</a>
+          <a href="">Blog</a>
+          <a href="">Careers</a>
+        </div>
+        <div>
+          <p>Connect</p>
+          <a href="">Contact</a>
+          <a href="">Newsletter</a>
+          <a href="">LinkedIn</a>
+        </div>
       </div>
     </div>
   </div>
